- Another fix with indents and redrawing

Reggie, 24.9.1998:
------------------
- Started implementing: Insert, display and format pictures as character.
  It already works somehow...

Reggie, 25.9.1998:
------------------
- More work on pictures as characters

Reggie, 26.9.1998:
------------------
- Fixed some problems with deleting Text (Key_Delete/Key_Backspace) and
  linebreaking
- Improved KFormatContext::makeLineLayout() to make the linebreaking more
  precise and to make it work correctly with special characters (like pictures)

Reggie, 28.9.1998:
------------------
- Added JPEG filter
- some fixes

Reggie, 29.9.1998:
------------------
- Bugfix with drawing the cursor

Reggie, 30.9.1998:
------------------
- Started implementing placing the cursor with the mouse (but it doesn't do
  anything at the moment...)

Reggie, 1.10.1998:
------------------
- Cursor style is changing according to the font attribute of the current place
- Placing the cursor with the mouse works now

Reggie, 2.10.1998:
------------------
- Implemented selecting text with the mouse
- Implemented deleting selected text and replacing
  selected text with an entered character
- Implemented selecting text with the keyboard (cursor-keys + Shift)

Reggie, 3.10.1998:
------------------
- Bugfix with setting the format for multiple characters
- Implemented selection a word with a mouse double click
- The flows CENTER and RIGHT work now => ALL flows work now :-)
- Fixed a bug in cursor navigation
- Automatical scrolling when selecting text 
  (there are some redraw problems when selecting text now because of the 
   automatical scrolling)
- Some bugfixes in KWFormatContext

Reggie, 4.10.1998:
------------------
- Bugfix with calculating correct line heights (ascender/descender)
- Bugfix with setting the formats correctly
- I think I fixed now all redraw problems when selecting text
  (it's flickering now a bit, but I'll fix that too one time :-)
- Implemented simple Cut&Copy (ASCII text)