@@ -1,0 +1,21 @@
+/* XPM */
+static char * autoform_xpm[] = {
+"16 16 2 1",
+" 	c None",
+".	c black",
+"                ",
+" ............   ",
+" .          .   ",
+" .          .   ",
+"  .          .  ",
+"  .          .  ",
+"  .          .  ",
+"   .          . ",
+"   .          . ",
+"   .          . ",
+"    .          .",
+"    .          .",
+"    .          .",
+"     ...........",
+"                ",
+"                "}
