@@ -1,0 +1,22 @@
+/* XPM */
+static char * mini_clipart_xpm[] = {
+"22 22 5 1",
+" 	c None",
+".	c #000000",
+"+	c #00FF00",
+"@	c #0000FF",
+"#	c #FF0000",
+"     .          ",
+"    .+.      ...",
+"   .+++.   ..@@@",
+"  .+++++.  .@@@@",
+" .+++++++..@@@@@",
+"  .+++++. .@@@@@",
+"....+++....@@@@@",
+".###.+.####.@@@@",
+".####.#####..@@@",
+".##########. ...",
+".##########.    ",
+".##########.    ",
+".##########.    ",
+"............    "};
