@@ -1,0 +1,27 @@
+/* XPM */
+static char * mini_picture_xpm[] = {
+"16 16 8 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFF00",
+"@	c #FF00FF",
+"#	c #00FF00",
+"$	c #808080",
+"%	c #FF0000",
+"&	c #0000FF",
+"    ...         ",
+"   .+++..       ",
+"  .++++++.      ",
+" .+++@@@++.    .",
+".++++@@@.+... ..",
+".++##$..+++.... ",
+".+###$++++++..  ",
+".+$$$++++.$..+..",
+".++++++++....++.",
+" .+%%%.+++..+++.",
+" .+%%%.++++++++.",
+"  .+..+&&&&&+++.",
+"   .+++&&&&+++. ",
+"    ...+++++..  ",
+"    .. .....    ",
+"   ..           "};
