@@ -1,0 +1,16 @@
+/* XPM */
+static char * mini_rect_xpm[] = {
+"16 11 2 1",
+" 	c None",
+".	c #000000",
+" .............  ",
+" .           .  ",
+" .           .  ",
+" .           .  ",
+" .............  ",
+"                ",
+"                ",
+"                ",
+"                ",
+"                ",
+"                "};
