@@ -1,0 +1,21 @@
+/* XPM */
+static char * text_xpm[] = {
+"16 16 2 1",
+" 	s None	c None",
+".	c #FFFF00000000",
+"                ",
+"                ",
+"       ..       ",
+"      ....      ",
+"     ......     ",
+"     ..  ..     ",
+"     ..  ..     ",
+"    ..    ..    ",
+"    ..    ..    ",
+"    ........    ",
+"   ..........   ",
+"   ..      ..   ",
+"   ..      ..   ",
+"  ....    ....  ",
+"                ",
+"                "};
